syntax = "proto3";
package aequitas.claims.v1;

import "gogoproto/gogo.proto";
import "aequitas/claims/v1/claims.proto";

option go_package = "github.com/CreoDAMO/REPAR/aequitas/x/claims/types";

// GenesisState defines the claims module's genesis state
message GenesisState {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  repeated ArbitrationClaim claims = 1 [(gogoproto.nullable) = false];
  repeated ArbitrationAward awards = 2 [(gogoproto.nullable) = false];
}
